Add `xdg-global-shortcuts-portal` feature to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -132,10 +132,12 @@ profile-with-tracy = ["tracy-client/default"]
 profile-with-tracy-allocations = ["profile-with-tracy"]
 
 # Marker feature to enable all supported portals.
-all-portals = ["xdg-screencast-portal"]
+all-portals = ["xdg-global-shortcuts-portal", "xdg-screencast-portal"]
 
 # Enable xdg-screencast portal support
 xdg-screencast-portal = ["pipewire", "dbus", "smithay/backend_gbm"]
+# Enable xdg-global shortcuts portal support
+xdg-global-shortcuts-portal = ["dbus"]
 
 # UWSM support. https://github.com/Vladimir-csp/uwsm
 # Recommended if you are under systemd.
